--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,4 +5,5 @@
     {% for post in posts %}
     <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
     {% endfor %}
+    <li><a href="{{ url_for('manage_users') }}">Manage Users</a></li>
 {% endblock %}
