--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -3,7 +3,10 @@
 {% block content %}
 
 <!-- Links to feature -->
- <h1>Admin Dashboard</h1>
+ <p>
+    <h1>Admin Dashboard</h1>
+    <h2> Welcome, {{ current_user.firstName }}!</h2>
+</p>
  <h2>Quick Links</h2>
 <p>
     <a href="{{ url_for('manage_users') }}" class="admin-dash-btn">User Management</a>
