--- a/app/templates/admin/createUser.html
+++ b/app/templates/admin/createUser.html
@@ -58,6 +58,43 @@
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
+
+         <!-- Department Dropdown Field -->
+         <p>
+            {{ form.department.label }}<br>
+            {{ form.department() }}<br>
+            {% for error in form.department.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+
+        <!-- Job Title Field -->
+        <p>
+            {{ form.job_title.label }}<br>
+            {{ form.job_title(size=32) }}<br>
+            {% for error in form.job_title.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+
+        <!-- Manager -->
+        <p>
+            {{ form.manager.label }}<br>
+            {{ form.manager() }}<br>
+            {% for error in form.job_title.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+
+        <!-- Is Onboarding -->
+        <p>
+            {{ form.is_onboarding.label }}<br>
+            {{ form.is_onboarding() }}<br>
+            {% for error in form.is_onboarding.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        
         
         <!-- Submit Button -->
         <p>{{ form.submit() }}</p>
@@ -68,4 +105,3 @@
         </p>
     </form>
 {% endblock %}
-
