--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -5,7 +5,7 @@
 <!-- Links to feature -->
  <p>
     <h1>Admin Dashboard</h1>
-    <h2> Welcome, {{ current_user.firstName }}!</h2>
+    <h2> Welcome, {{ current_user.first_name }}!</h2>
 </p>
  <h2>Quick Links</h2>
 <p>
