--- a/app/templates/admin/manageUsers.html
+++ b/app/templates/admin/manageUsers.html
@@ -1,10 +1,54 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Manage Users</h1>
-<p>Table of users will go here.</p>
+<html>
+    <body>
+        <h1>Manage Users</h1>
+        <table class="w3-table w3-bordered w3-striped">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>First Name</th>
+                    <th>Surname</th>
+                    <th>Email</th>
+                    <th>Job Title</th>
+                    <th>Department</th>
+                    <th>Role</th>
+                    <th>Onboarding</th>
+                    <th>Manager</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for user in users %}
+                <tr>
+                    <td>{{ user.id }}</td>
+                    <td>{{ user.first_name }}</td>
+                    <td>{{ user.surname }}</td>
+                    <td>{{ user.username }}</td>
+                    <td>{{ user.job_title }}</td>
+                    <td>{{ user.department.department_name }}</td>
+                    <td>{{ user.role.role_name }}</td>
+                    <td>{{ 'Yes' if user.is_onboarding else 'No' }}</td>
+                    <td>
+                        {% if user.manager_id %}
+                            {{ user.manager.first_name }} {{ user.manager.surname }}
+                        {% else %}
+                            None
+                        {% endif %}
+                    </td>
+                    <td>
+                        <a href="{{ url_for('edit_user', user_id=user.id) }}">Edit</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <p>
+            <a href="{{ url_for('register_user') }}">Create New User</a>
+            <a href="{{ url_for('admin_dashboard') }}" class="btn">Back</a>
+        </p>
 
-<p><a href="{{ url_for('register_user') }}">Create New User</a></p>
-
+    </body>
+</html>
 {% endblock %}
 
