Create & manage training seem to be working - view training details needs updated

--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -15,9 +15,9 @@
     <br>
     <a href="{{ url_for('manage_users') }}" class="admin-dash-btn">Add New Policy</a>
     <br>
-    <a href="{{ url_for('manage_users') }}" class="admin-dash-btn">Add New Training Module</a>
+    <a href="{{ url_for('create_training_module') }}" class="admin-dash-btn">Add New Training Module</a>
     <br>
-    <a href="{{ url_for('manage_users') }}" class="admin-dash-btn">Add Form</a>
+    <a href="{{ url_for('manage_training_modules') }}" class="admin-dash-btn">View Training Modules</a>
     <br>
     <a href="{{ url_for('register_user') }}" class="admin-dash-btn">Add New User</a>
     <br>
