Training details working

--- a/app/templates/admin/create_training_module.html
+++ b/app/templates/admin/create_training_module.html
@@ -64,5 +64,9 @@
     <div>
         {{ form.submit(class="btn btn-primary") }}
     </div>
+
+    <div>
+        <a href="{{ url_for('manage_training_modules') }}" class="btn">Back</a>
+    </div>
 </form>
 {% endblock %}
