--- a/app/templates/admin/details_training_module.html
+++ b/app/templates/admin/details_training_module.html
@@ -35,5 +35,5 @@
     <p>No questions available for this module.</p>
 {% endif %}
 
-<a href="{{ url_for('training_modules') }}" class="btn btn-secondary">Back to Modules</a>
+<a href="{{ url_for('manage_training_modules') }}" class="btn btn-secondary">Back to Modules</a>
 {% endblock %}
