--- a/app/templates/admin/manage_training_modules.html
+++ b/app/templates/admin/manage_training_modules.html
@@ -9,9 +9,6 @@
         <tr>
             <th>#</th>
             <th>Title</th>
-            <th>Description</th>
-            <th>Instructions</th>
-            <th>Video</th>
             <th>Actions</th>
         </tr>
     </thead>
@@ -20,20 +17,10 @@
         <tr>
             <td>{{ loop.index }}</td>
             <td>{{ module.module_title }}</td>
-            <td>{{ module.module_description }}</td>
-            <td>{{ module.module_instructions }}</td>
-            <td>
-                {% if module.video_url %}
-                <a href="{{ module.video_url }}" target="_blank">Watch Video</a>
-                {% else %}
-                No Video
-                {% endif %}
             </td>
             <td>
                 <a href="{{ url_for('details_training_module', module_id=module.id) }}" class="btn btn-sm btn-info">
                     View Details</a>
-                <a href="{{ url_for('edit_training_module', module_id=module.id) }}" class="btn btn-sm btn-warning">Edit</a>
-                <a href="{{ url_for('delete_training_module', module_id=module.id) }}" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this module?')">Delete</a>
             </td>
         </tr>
         {% endfor %}
@@ -44,4 +31,5 @@
 {% endif %}
 
 <a href="{{ url_for('create_training_module') }}" class="btn btn-primary">Create New Module</a>
+<a href="{{ url_for('admin_dashboard') }}" class="btn btn-primary">Back</a>
 {% endblock %}
