--- a/app/templates/dashboard_manager.html
+++ b/app/templates/dashboard_manager.html
@@ -15,4 +15,9 @@
     <a href="{{ url_for('manage_users') }}" class="staff-dash-btn">Knowledge Base</a>
 </p>
 
+<!-- Back Button -->
+<p>
+    <a href="{{ url_for('manage_users') }}" class="btn">Back</a>
+</p>
+
 {% endblock %}
