--- a/app/templates/dashboard_staff.html
+++ b/app/templates/dashboard_staff.html
@@ -8,11 +8,11 @@
 </p>
  <h2>Quick Links</h2>
 <p>
-    <a href="{{ url_for('manage_users') }}" class="staff-dash-btn">Training</a>
+    <a href="{{ url_for('training_dashboard') }}" class="staff-dash-btn">Training</a>
     <br>
-    <a href="{{ url_for('manage_users') }}" class="staff-dash-btn">Onboarding</a>
+    <a href="{{ url_for('training_dashboard') }}" class="staff-dash-btn">Onboarding</a>
     <br>
-    <a href="{{ url_for('manage_users') }}" class="staff-dash-btn">Knowledge Base</a>
+    <a href="{{ url_for('training_dashboard') }}" class="staff-dash-btn">Knowledge Base</a>
 </p>
 
 {% endblock %}
