--- a/app/templates/dashboard_training.html
+++ b/app/templates/dashboard_training.html
@@ -22,4 +22,8 @@
     <p>No training modules assigned.</p>
 {% endif %}
 
+<p>
+    <a href="{{ url_for('staff_dashboard') }}" class="btn">Back</a>
+</p>
+
 {% endblock %}
