--- a/app/templates/take_training_module.html
+++ b/app/templates/take_training_module.html
@@ -22,6 +22,7 @@
     </div>
     {% endfor %}
     
+    <button type="submit" name="action" value="save" class="btn btn-primary">Save Progress</button>
     <button type="submit" class="btn btn-success">Submit Training</button>
     <a href="{{ url_for('training_dashboard') }}" class="btn btn-secondary">Back to Dashboard</a>
 </form>
