--- a/app/templates/take_training_module.html
+++ b/app/templates/take_training_module.html
@@ -4,7 +4,6 @@
 <p>{{ module.module_instructions }}</p>
 
 <form method="POST" action="">
-    
     {% for question in module.questions %}
     <div class="mb-3">
         <h4>{{ question.question_text }}</h4>
@@ -13,7 +12,8 @@
             <input class="form-check-input" type="radio" 
                    name="question_{{question.id}}" 
                    value="{{ option.id }}" 
-                   id="option_{{option.id}}">
+                   id="option_{{option.id}}"
+                   {% if user_answers.get(question.id) == option.id %} checked {% endif %}>
             <label class="form-check-label" for="option_{{option.id}}">
                 {{ option.option_text }}
             </label>
@@ -21,9 +21,9 @@
         {% endfor %}
     </div>
     {% endfor %}
-    
+
+    <button type="submit" name="action" value="submit" class="btn btn-success">Submit Training</button>
     <button type="submit" name="action" value="save" class="btn btn-primary">Save Progress</button>
-    <button type="submit" class="btn btn-success">Submit Training</button>
     <a href="{{ url_for('training_dashboard') }}" class="btn btn-secondary">Back to Dashboard</a>
 </form>
 {% endblock %}
