--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,9 +6,10 @@
         <title>Vision Hub</title> 
             <meta charset="UTF-8">
             <title>Vision Hub</title>
-           
-            <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
-
+            <link 
+            href="{{ url_for('static', filename='css/bootstrap.min.css') }}" 
+            rel="stylesheet"/>
+    
         </head>
     <body>
         
