--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -29,11 +29,10 @@ body {
 .content {
     background-color: white;
     border-radius: 8px;
-    margin: 20px auto;
-    margin-left: 220px; 
+    margin-left: 240px; 
     padding: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-    max-width: 900px;
+    max-width: calc(100% - 240px - 40px);
 }
 
 .sidebarLogo {
@@ -64,6 +63,80 @@ body {
 #clock {
     color: #1a1d1c;
     margin-right: 20px; 
+}
+
+.sideNavLink-container {
+    margin-top: 20px; 
+}
+
+.logo-name-container {
+    display: flex; 
+    align-items: center;
+    justify-content: flex-start; 
+    margin-left: 240px; 
+    margin-top: 20px; 
+    padding: 10px 20px; 
+}
+
+.visionhub-font {
+    font-family: 'Playfair Display', serif;
+    font-size: 2rem;
+    font-weight: bold; 
+    color: #00854a; 
+    margin: 0; 
+    margin-right: 20px; 
+}
+
+.welcome-text {
+    font-family: 'Roboto', sans-serif; 
+    font-size: 1.5rem; 
+    color: #333; 
+    margin: 0;
+}
+
+.btn-view-details {
+    color: #333;
+}
+
+.video-container {
+    position: relative;
+    width: 100%;
+    max-width: 800px; 
+    margin: 0 auto; 
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0; 
+}
+
+/* Admin Styling*/
+
+.admin-quick-links {
+    display: grid;
+    grid-template-columns: repeat(3, 250px); 
+    grid-gap: 20px; 
+    margin-top: 20px;
+    justify-content: center; 
+    align-items: center;
+}
+
+.quick-link-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 200px;
+    height: 150px;
+    border-radius: 8px;
+    color: white; 
+    text-decoration: none;
+    font-weight: bold; 
+    background-color: #4cbfa4;
 }
 
 .progress-bar {
