Start of sign in html

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,23 +1,47 @@
+<!doctype html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Vision Hub</title> 
+            <meta charset="UTF-8">
+            <title>Vision Hub</title>
+            <link 
+            href="{{ url_for('static', filename='css/bootstrap.min.css') }}" 
+            rel="stylesheet"/>
+            <link href="{{ url_for('static', filename='css/stylesheet.css') }}" rel="stylesheet"/>
+    </head>
+    <body class="login-page">
+        <div class="wave"></div>
+            <!-- Wave SVG -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#00854a" fill-opacity="1" d="M0,288L34.3,277.3C68.6,267,137,245,206,208C274.3,171,343,117,411,90.7C480,64,549,64,617,74.7C685.7,85,754,107,823,122.7C891.4,139,960,149,1029,176C1097.1,203,1166,245,1234,266.7C1302.9,288,1371,288,1406,288L1440,288L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"></path></svg>
+        <div class="login-details">
+        <h1>Sign In</h1>
+        <form action="" method="post" novalidate>
+            {{ form.hidden_tag() }}
+            <p>
+                {{ form.username.label }}<br>
+                {{ form.username(size=32) }}<br>
+                {% for error in form.username.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
+            </p>
+            <p>
+                {{ form.password.label }}<br>
+                {{ form.password(size=32) }}<br>
+                {% for error in form.username.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
+            </p>
+            <p>
+                {{ form.remember_me() }} {{ form.remember_me.label }}
+            </p>
+            <p>
+                {{ form.submit() }}
+            </p>
+        </form>
+        </div>
+        <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+    </body>
+</html>
 
-{% block content %}
-    <h1>Sign In</h1>
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit() }}</p>
-    </form>
-{% endblock %}
