--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -143,3 +143,35 @@ body {
     height: 10px;
     border-radius: 5px;
 }
+
+/* Login Page Styling*/
+body.login-page {
+    background-color: #f0f4f8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Full viewport height */
+    margin: 0;
+}
+
+.login-details {
+    background-color: white;
+    border-radius: 8px;
+    padding: 20px;
+    width: 300px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center; /* Center align text inside */
+}
+
+.wave {
+    min-height:100vh;
+    width: 50%;
+    position: relative
+}
+
+svg {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+}
