--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -146,32 +146,45 @@ body {
 
 /* Login Page Styling*/
 body.login-page {
-    background-color: #f0f4f8;
+    background-color: #ffff;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Full viewport height */
+    height: 100vh; 
     margin: 0;
+    text-align: center;
 }
 
-.login-details {
-    background-color: white;
-    border-radius: 8px;
-    padding: 20px;
-    width: 300px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: center; /* Center align text inside */
+.login-details-top {
+    background-color: #ffffff;
+    z-index: 1;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    border-radius: 5px;
+ 
+    
 }
+
+.login-enter-details {
+    background-color: #f1f0f0;
+    padding: 5px;
+    width: 400px;
+    z-index: 1;
+}
+
+.login-details-bottom {
+    background-color: #ffffff;
+    z-index: 1;
+
+}
+
+
 
 .wave {
-    min-height:100vh;
-    width: 50%;
-    position: relative
-}
-
-svg {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-
+    background-image: url('../images/loginBackground.svg');
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    height: 100%;
+    width: 100%; 
+    position: absolute; 
+    z-index: 0; 
 }
