--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,7 +36,7 @@
                     <a class="nav-link text-white" href="{{ url_for('training_dashboard') }}">Training</a>
                 {% endif %}
             </nav>
-            <img src="{{ url_for('static', filename='images/loginLogo(2).svg') }}" class="sidebarLogo">
+            <img src="{{ url_for('static', filename='images/logoImageWhite.svg') }}" class="sidebarLogo">
         </div>
 
          <!-- Top Bar -->
