--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,31 @@
         <!-- Sidebar -->
          <div class="sidebar">
             <div class="profile-container">
-                <img src="{{ url_for('static', filename='images/profilePhoto/profileDefault.png') }}" class="profilePicture">
+                <form id="photoForm"
+                    action="{{ url_for('update_profile_photo') }}"
+                    method="POST"
+                    enctype="multipart/form-data"
+                    style="display:inline;">
+                <!-- remember current URL -->
+                <input type="hidden" name="next" value="{{ request.path }}">
+
+                <!-- hidden file input -->
+                <input type="file"
+                        id="fileInput"
+                        name="photo"
+                        accept=".png,.jpg,.jpeg"
+                        style="display:none;">
+
+                <!-- clickable avatar -->
+                <img src="{{ url_for('static',
+                                    filename='images/profilePhoto/' 
+                                        ~ (current_user.profile_photo or 'profileDefault.png')) }}"
+                    id="profilePicture"
+                    class="profilePicture"
+                    alt="Click to change photo"
+                    style="cursor:pointer; width:100px; height:100px;
+                            object-fit:cover; border-radius:50%;">
+                </form>
                 <h5>{{ current_user.first_name }} {{ current_user.surname }}</h5>
             </div>
             <nav class="nav flex-column sideNavLink-container">
@@ -62,5 +86,6 @@
         </div>
 
         <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/profilePhotoUpload.js') }}"></script>
     </body>
 </html>
