--- a/app/templates/admin/manageUsers.html
+++ b/app/templates/admin/manageUsers.html
@@ -3,11 +3,11 @@
 {% block content %}
 <html>
     <body>
-        <h1>Manage Users</h1>
-        <table class="w3-table w3-bordered w3-striped">
+        <h1 class>User Management</h1>
+        <div class = "table-wrapper">
+        <table class= "user-table">
             <thead>
                 <tr>
-                    <th>ID</th>
                     <th>First Name</th>
                     <th>Surname</th>
                     <th>Email</th>
@@ -15,14 +15,11 @@
                     <th>Department</th>
                     <th>Role</th>
                     <th>Onboarding</th>
-                    <th>Manager</th>
-                    <th>Pathway</th>
                 </tr>
             </thead>
             <tbody>
                 {% for user in users %}
                 <tr>
-                    <td>{{ user.id }}</td>
                     <td>{{ user.first_name }}</td>
                     <td>{{ user.surname }}</td>
                     <td>{{ user.username }}</td>
@@ -31,32 +28,18 @@
                     <td>{{ user.role.role_name }}</td>
                     <td>{{ 'Yes' if user.is_onboarding else 'No' }}</td>
                     <td>
-                        {% if user.manager_id %}
-                            {{ user.manager.first_name }} {{ user.manager.surname }}
-                        {% else %}
-                            None
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% if user.onboarding_path %}
-                            {{ user.onboarding_path.path_name }}
-                        {% else %}
-                            None
-                        {% endif %}
-                    </td>
-                    <td>
-                        <a href="{{ url_for('edit_user', user_id=user.id) }}">Edit</a>
+                        <a class = "royal-blue-button" href="{{ url_for('view_user', user_id=user.id) }}">View</a>
+                        <a class = "royal-blue-button" href="{{ url_for('edit_user', user_id=user.id) }}">Edit</a>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-        <p>
-            <a href="{{ url_for('register_user') }}">Create New User</a>
-            <a href="{{ url_for('admin_dashboard') }}" class="btn">Back</a>
-        </p>
-
+            <div class = "button-container-outside-table">
+                <a class = "dark-blue-button" href="{{ url_for('register_user') }}">Create New User</a>
+                <a class = "dark-blue-button" href="{{ url_for('admin_dashboard') }}" class="btn">Back</a>
+            </div>
+        </div>
     </body>
 </html>
 {% endblock %}
-
