--- a/app/templates/admin/manageUsers.html
+++ b/app/templates/admin/manageUsers.html
@@ -3,7 +3,7 @@
 {% block content %}
 <html>
     <body>
-        <h1 class>User Management</h1>
+        <h1 class = "page-title">User Management</h1>
         <div class = "table-wrapper">
         <table class= "user-table">
             <thead>
